@@ -35,6 +35,7 @@ LOAD_MAP = { synglob.ID_LANG_ADA : TAGLIB + 'adatags',
              synglob.ID_LANG_BASH : TAGLIB + 'shtags',
              synglob.ID_LANG_BATCH : TAGLIB + 'batchtags',
              synglob.ID_LANG_CSH : TAGLIB + 'shtags',
+             synglob.ID_LANG_ESS : TAGLIB + 'esstags',
              synglob.ID_LANG_F77 : TAGLIB + 'fortrantags',
              synglob.ID_LANG_F95 : TAGLIB + 'fortrantags',
              synglob.ID_LANG_KSH : TAGLIB + 'shtags',
